--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
-.App {
+.AppMainPage {
   /* text-align: center; */
   padding-top: 50px;
   padding-left: 40px;
   padding-right: 40px;
+}
+
+.AppNumberpage {
+  padding-top: 50px;
+  padding-left: 55px;
+  padding-right: 55px;
 }
