--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   background-color: whitesmoke;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  /* font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif; */
 }
